# simple_api

./: .flake8  .isort.cfg  .travis.yml  LICENSE  README.md  app.py  example.py  models.py  pyproject.toml  requirements.txt  setup.py  test.py
docs/: conf.py  config.rst  index.rst  main.rst  test.rst  test2.rst
old_code/: model_pydantic.py  my_orm.py  orm.py  pydantic_orm.py
simple_api/: __init__.py  api.py  config.py  endpoint.py  main.py  router.py  url_params.py
simplerestapi/: __init__.py  api.py  config_validator.py  endpoint.py  exception.py  main.py  model_validator.py  router.py  url_params.py  utils.py
src/simplerestapi/: api.py  endpoint.py
tests/: base.py  conftest.py  models.py  test_api.py  test_config.py  test_endpoint.py  test_main.py  test_model_validator.py  test_simple_api.py  test_url_params.py
